--- a/app/src/main/res/layout/item_weibo_comment.xml
+++ b/app/src/main/res/layout/item_weibo_comment.xml
@@ -33,7 +33,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/line_moment"
+        android:background="@color/list_line"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         />
