--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        style="@style/CustomTabLayout"
         />
 
     <android.support.v4.view.ViewPager
@@ -27,6 +28,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tabs"
         android:background="@color/white"
+
 
         />
 
