--- a/app/src/main/res/layout/item_weibo.xml
+++ b/app/src/main/res/layout/item_weibo.xml
@@ -20,13 +20,15 @@
         android:layout_marginLeft="50dp"
         android:orientation="vertical">
 
-        <TextView
+        <com.dudutech.biu.widget.TextViewFixTouchConsume
             android:id="@+id/tv_content"
             style="@style/txt_main_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lineSpacingMultiplier="1.2"
-            android:paddingTop="@dimen/SmallMargin" />
+            android:paddingTop="@dimen/SmallMargin"
+
+            />
 
 
         <com.dudutech.biu.widget.FlowLayout
