--- a/app/src/main/res/layout/item_weibo_detail.xml
+++ b/app/src/main/res/layout/item_weibo_detail.xml
@@ -68,7 +68,7 @@
 
         android:orientation="vertical">
 
-        <TextView
+        <com.dudutech.biu.widget.TextViewFixTouchConsume
             android:id="@+id/tv_content"
             style="@style/txt_main_content_white"
             android:layout_width="match_parent"
@@ -106,7 +106,7 @@
                 android:layout_marginTop="@dimen/SmallMargin"
                 />
 
-            <TextView
+            <com.dudutech.biu.widget.TextViewFixTouchConsume
                 android:id="@+id/tv_orignal_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
